fixed overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   color: white;
   background-color: #282c34;
   margin: 0;
